dr01-python-microservices6/k8s-test6/fastapi-cast-postgres/app/cast-service-deployment.yaml
# /home/cpa/Documents/CPA/44_JENKINS/DM.JENKINS/DM-SP04-C04-JENKINS-CPA-MAY2024/dm-ds-cdo-may24-jenkins/dr01-python-microservices6/k8s-test4/cast-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cast-service-deployment
  labels:
    app: fastapi-casts
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cast-service
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: cast-service
    spec:
      containers:
      - name: cast-service
        image: cpa8876/casts-ds-fastapi:v.74.0
        ports:
          - containerPort: 8005
        command: ["uvicorn", "app.main:app", "--reload", "--host", "0.0.0.0", "--port", "8005"]
        volumeMounts:
            - name: cast-service-config-pvc
              mountPath: datas/fastapi-cast-config
      volumes:
        - name: cast-service-config-pvc
          persistentVolumeClaim:
            claimName: cast-service-claim0
